android layout issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -206,20 +206,3 @@ textarea {
   border: 1px solid var(--element-bg);
   color: var(--foreground);
 }
-
-/* hide scroll bar */
-
-body{
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    position: relative;
-}
-main{
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: -20px;
-    right: -20px; 
-    overflow: scroll;
- }
